--- a/html/site/index.html
+++ b/html/site/index.html
@@ -4,8 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Index</title>
+    <link rel="stylesheet" href="../../css/bootstrap.css">
 </head>
 <body>
-    <h1>HOLAA</h1>
+    <div>
+        <header>
+            <nav class="navbar navbar-expand-sm bg-light justify-content-center"></nav>
+        </header>
+    </div>
 </body>
 </html>
