--- a/html/dashboard/dashboard.html
+++ b/html/dashboard/dashboard.html
@@ -167,7 +167,7 @@
               <div class="card bg-primary text-white h-100">
                 <div class="card-body py-5">Clientes</div>
                 <div class="card-footer d-flex">
-                  View Details
+                  Ver Details
                   <span class="ms-auto">
                     <i class="bi bi-chevron-right"></i>
                   </span>
@@ -178,7 +178,7 @@
               <div class="card bg-warning text-dark h-100">
                 <div class="card-body py-5">Productos</div>
                 <div class="card-footer d-flex">
-                  View Details
+                  Ver Details
                   <span class="ms-auto">
                     <i class="bi bi-chevron-right"></i>
                   </span>
@@ -189,7 +189,7 @@
               <div class="card bg-success text-white h-100">
                 <div class="card-body py-5">Ventas</div>
                 <div class="card-footer d-flex">
-                  View Details
+                  Ver Details
                   <span class="ms-auto">
                     <i class="bi bi-chevron-right"></i>
                   </span>
