Varios cambios y adiciones

--- a/html/site/productos.html
+++ b/html/site/productos.html
@@ -68,22 +68,11 @@
                 </div>
               </nav>
         </div>
-        <div></div>
-        <div class="mt-4 p-5 bg-dark text-white">
-            <h1>Bienvenido a lo último en componentes para tu PC.</h1>
-            <p>Visita nuestras distintas secciones:</p>
-            <div class="d-flex justify-content-between align-items-center">
-                <a href="../site/productos.html" class="p-3 btn btn-primary big-button"><h2>Ofertas</h2></a>
-                <a href="../site/productos.html" class="p-3 btn btn-primary big-button"><h2>Novedades</h2></a>
-                <a href="../site/productos.html" class="p-3 btn btn-primary big-button"><h2>Preventas</h2></a>
-            </div>
-        </div>
-        <div class="container mt-3">
-            <h1>Lo mas vendido</h1>
-        </div>
-        <div class="container">
+        <div class="container-fluid p-5">
+          <h1>"Categoría"</h1>
+          <div class="container-fluid">
             <div class="row">
-                <div class="col mb-5">
+                <div class="col-xl-4 mb-5">
                     <div class="container rounded border bg-light product-card">
                         <a href="">
                           <div class="row">
@@ -97,7 +86,7 @@
                         </a>
                       </div>
                 </div>
-                <div class="col mb-5">
+                <div class="col-xl-4 mb-5">
                     <div class="container rounded border bg-light product-card">
                         <a href="">
                           <div class="row">
@@ -111,7 +100,7 @@
                         </a>
                       </div>
                 </div>
-                <div class="col mb-5">
+                <div class="col-xl-4 mb-5">
                     <div class="container rounded border bg-light product-card">
                         <a href="">
                           <div class="row">
@@ -125,7 +114,63 @@
                         </a>
                       </div>
                 </div>
-                <div class="col mb-5">
+                <div class="col-xl-4 mb-5">
+                    <div class="container rounded border bg-light product-card">
+                        <a href="">
+                          <div class="row">
+                            <div class="col"> <img src="../../img/gpu.png" alt="" class="product-img rounded"></div>
+                            <div class="col">
+                              <h3>GeForce RTX 4060 VENTUS 2X BLACK 8G</h3>
+                              <p>Stock: 10</p>
+                              <h2 class="text-end me-3">$299.990</h2>
+                              </div>
+                          </div>
+                        </a>
+                      </div>
+                </div>
+                <div class="col-xl-4 mb-5">
+                    <div class="container rounded border bg-light product-card">
+                        <a href="">
+                          <div class="row">
+                            <div class="col"> <img src="../../img/gpu.png" alt="" class="product-img rounded"></div>
+                            <div class="col">
+                              <h3>GeForce RTX 4060 VENTUS 2X BLACK 8G</h3>
+                              <p>Stock: 10</p>
+                              <h2 class="text-end me-3">$299.990</h2>
+                              </div>
+                          </div>
+                        </a>
+                      </div>
+                </div>
+                <div class="col-xl-4 mb-5">
+                    <div class="container rounded border bg-light product-card">
+                        <a href="">
+                          <div class="row">
+                            <div class="col"> <img src="../../img/gpu.png" alt="" class="product-img rounded"></div>
+                            <div class="col">
+                              <h3>GeForce RTX 4060 VENTUS 2X BLACK 8G</h3>
+                              <p>Stock: 10</p>
+                              <h2 class="text-end me-3">$299.990</h2>
+                              </div>
+                          </div>
+                        </a>
+                      </div>
+                </div>
+                <div class="col-xl-4 mb-5">
+                    <div class="container rounded border bg-light product-card">
+                        <a href="">
+                          <div class="row">
+                            <div class="col"> <img src="../../img/gpu.png" alt="" class="product-img rounded"></div>
+                            <div class="col">
+                              <h3>GeForce RTX 4060 VENTUS 2X BLACK 8G</h3>
+                              <p>Stock: 10</p>
+                              <h2 class="text-end me-3">$299.990</h2>
+                              </div>
+                          </div>
+                        </a>
+                      </div>
+                </div>
+                <div class="col-xl-4 mb-5">
                     <div class="container rounded border bg-light product-card">
                         <a href="">
                           <div class="row">
@@ -140,6 +185,7 @@
                       </div>
                 </div>
             </div>
+        </div>
         </div>
     </div>
 </body>
