--- a/html/dashboard/dashboard.html
+++ b/html/dashboard/dashboard.html
@@ -11,15 +11,17 @@
     <script>src="script.js"</script>
 </head>
 <body>
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
+  <div class="container-fluid">
+    <nav class="navbar navbar-expand-xxl navbar-dark bg-dark fixed-top">
+
         <div class="container-fluid">
           <button
-            class="navbar-toggler"
+            class="bg-dark rounded"           
             type="button"
             data-bs-toggle="offcanvas"
             data-bs-target="#sidebar"
             aria-controls="offcanvasExample"
-          >
+          >  
             <span class="navbar-toggler-icon" data-bs-target="#sidebar"></span>
           </button>
           <a
@@ -75,6 +77,7 @@
           </div>
         </div>
       </nav>
+   </div>
       <div
         class="offcanvas offcanvas-start sidebar-nav bg-dark"
         tabindex="-1"
@@ -95,59 +98,46 @@
               </li>
               <li class="my-4"><hr class="dropdown-divider bg-light" /></li>
               <li>
-                <div class="text-muted small fw-bold text-uppercase px-3 mb-3">
-                  Interface
+                <div class="bg-white text-muted small fw-bold text-uppercase px-3 mb-3">
+                  Gestion
                 </div>
               </li>
               <li>
                 <a
                   class="nav-link px-3 sidebar-link"
                   data-bs-toggle="collapse"
-                  href="#layouts"
+                  href="html/productos.html"
                 >
-                  <span class="me-2"><i class="bi bi-layout-split"></i></span>
-                  <span>Layouts</span>
+                  <span class="me-2"><i class="bi bi-bag"></i></span>
+                  <span>Productos</span>
                   <span class="ms-auto">
                     <span class="right-icon">
-                      <i class="bi bi-chevron-down"></i>
                     </span>
                   </span>
                 </a>
-                <div class="collapse" id="layouts">
-                  <ul class="navbar-nav ps-3">
-                    <li>
-                      <a href="#" class="nav-link px-3">
-                        <span class="me-2"
-                          ><i class="bi bi-speedometer2"></i
-                        ></span>
-                        <span>Dashboard</span>
-                      </a>
-                    </li>
-                  </ul>
-                </div>
               </li>
               <li>
                 <a href="#" class="nav-link px-3">
-                  <span class="me-2"><i class="bi bi-book-fill"></i></span>
-                  <span>Pages</span>
+                  <span class="me-2"><i class="bi bi-person-vcard-fill"></i></span>
+                  <span>Clientes</span>
                 </a>
               </li>
               <li class="my-4"><hr class="dropdown-divider bg-light" /></li>
               <li>
-                <div class="text-muted small fw-bold text-uppercase px-3 mb-3">
-                  Addons
+                <div class="bg-white text-muted small fw-bold text-uppercase px-3 mb-3">
+                  Finanzas <i class="bi bi-wallet"></i>
                 </div>
               </li>
               <li>
                 <a href="#" class="nav-link px-3">
                   <span class="me-2"><i class="bi bi-graph-up"></i></span>
-                  <span>Charts</span>
+                  <span>Ventas</span>
                 </a>
               </li>
               <li>
                 <a href="#" class="nav-link px-3">
                   <span class="me-2"><i class="bi bi-table"></i></span>
-                  <span>Tables</span>
+                  <span>Tablas</span>
                 </a>
               </li>
             </ul>
@@ -178,7 +168,7 @@
               <div class="card bg-warning text-dark h-100">
                 <div class="card-body py-5">Productos</div>
                 <div class="card-footer d-flex">
-                  Ver Details
+                  Ver Detalles
                   <span class="ms-auto">
                     <i class="bi bi-chevron-right"></i>
                   </span>
@@ -189,7 +179,7 @@
               <div class="card bg-success text-white h-100">
                 <div class="card-body py-5">Ventas</div>
                 <div class="card-footer d-flex">
-                  Ver Details
+                  Ver Detalles
                   <span class="ms-auto">
                     <i class="bi bi-chevron-right"></i>
                   </span>
@@ -225,7 +215,7 @@
             <div class="col-md-12 mb-3">
               <div class="card">
                 <div class="card-header">
-                  <span><i class="bi bi-table me-2"></i></span> Data Table
+                  <span><i class="bi bi-table me-2"></i></span> Tabla 
                 </div>
                 <div class="card-body">
 </body>
