--- a/html/dashboard/productos.html
+++ b/html/dashboard/productos.html
@@ -6,14 +6,14 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="../../css/style.css">
     <script>src="script.js"</script>
-    <title>Document</title>
+    <title>Productos</title>
 </head>
 <body>
     <div class="container-fluid">
         <nav class="navbar navbar-expand-xxl navbar-dark bg-dark fixed-top">
-    
+          
             <div class="container-fluid">
               <button
                 class="bg-dark rounded"           
@@ -143,51 +143,63 @@
                 </ul>
               </nav>
             </div>
-          </div>
-<div class="container-fluid">
-    <nav aria-label="Page navigation example">
-        <ul class="pagination">
-          <li class="page-item">
-            <a class="page-link" href="#" aria-label="Previous">
-              <span aria-hidden="true">&laquo;</span>
-            </a>
-          </li>
-          <li class="page-item"><a class="page-link" href="#">1</a></li>
-          <li class="page-item"><a class="page-link" href="#">2</a></li>
-          <li class="page-item"><a class="page-link" href="#">3</a></li>
-          <li class="page-item">
-            <a class="page-link" href="#" aria-label="Next">
-              <span aria-hidden="true">&raquo;</span>
-            </a>
-          </li>
-        </ul>
-      </nav>
-    <table class="table table-bordered">
+          </div>   
+<div class="container-fluid" style="margin-top: 5vw;">
+  <H1 class="font-monospace  text-uppercase">LISTA DE PRODUCTOS</H1>   
+  <nav aria-label="Page navigation">
+    <ul class="pagination justify-content-end ">
+      <li class="page-item disabled">
+        <a class="page-link" href="#" aria-label="Previous">
+          <span aria-hidden="true">&laquo;</span>
+        </a>
+      </li>
+      <li class="page-item active" aria-current="page">
+        <a class="page-link" href="#">1</a>
+      </li>
+      <li class="page-item"><a class="page-link" href="#">2</a></li>
+      <li class="page-item">
+        <a class="page-link" href="#">3</a>
+      </li>
+      <li class="page-item">
+        <a class="page-link" href="#" aria-label="Next">
+          <span aria-hidden="true">&raquo;</span>
+        </a>
+      </li>
+    </ul>
+  </nav>
+  
+    <table class="table table-bordered table-striped">
         <thead>
-          <tr>
-            <th scope="col">Codigo</th>
-            <th scope="col">Nombre</th>
-            <th scope="col">Cantidad</th>
-            <th scope="col">Estado</th>
-          </tr>
+            <tr>
+              <th scope="col">Codigo</th>
+              <th scope="col">Foto</th>
+              <th scope="col">Nombre</th>
+              <th scope="col">Stock</th>
+              <th scope="col">Editar</th>
+              <a href="dashboard.html"></a>  
+            </tr>        
         </thead>
         <tbody class="table-group-divider">
           <tr>
-            <th scope="row">1</th>
-            <td>Mark</td>
-            <td>Otto</td>
-            <td>@mdo</td>
+            <th class="align-middle" scope="row">100</th>
+            <td><div class="container-fluid " style="width: 100PX;"><img src="../../img/30502.jpg" class="img-fluid"></td></div>
+            <td class="align-middle ">TARJETA SUPER PRO</td>
+            <td class="align-middle ">10</td>
+            <td class="align-middle " colspan="2">Ver informacion <button><i class="bi bi-pencil-square"></i></button></td>
           </tr>
           <tr>
-            <th scope="row">2</th>
-            <td>Jacob</td>
-            <td>Thornton</td>
-            <td>@fat</td>
+            <th scope="row">101</th>
+            <td><div class="container-fluid " style="width: 100PX;"><img src="../../img/30502.jpg" class="img-fluid"></td></div>
+            <td class="align-middle ">TARJETA SUPER PRO 2</td>
+            <td class="align-middle ">20</td>
+            <td class="align-middle " colspan="2">Ver informacion <button><i class="bi bi-pencil-square"></i></button></td>
           </tr>
           <tr>
-            <th scope="row">3</th>
-            <td colspan="2">Larry the Bird</td>
-            <td>@twitter</td>
+            <th scope="row">102</th>
+            <td><div class="container-fluid " style="width: 100PX;"><img src="../../img/30502.jpg" class="img-fluid"></td></div>
+            <td class="align-middle ">TARJETA SUPER PRO 3</td>
+            <td class="align-middle ">30 </td>
+            <td class="align-middle " colspan="2">Ver informacion <button><i class="bi bi-pencil-square"></i></button></td>
           </tr>
         </tbody>
       </table>
