--- a/html/dashboard/cliente.html
+++ b/html/dashboard/cliente.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
     <link rel="stylesheet" href="../../css/style.css">
     <script>src="script.js"</script>
-    <title>Productos</title>
+    <title>Clientes</title>
 </head>
 <body>
     <div class="container-fluid">
@@ -133,12 +133,13 @@
                       <span>Ventas</span>
                     </a>
                   </li>
+                  <li>
                 </ul>
               </nav>
             </div>
           </div>   
 <div class="container-fluid" style="margin-top: 5vw;">
-  <H1 class="font-monospace  text-uppercase">LISTA DE PRODUCTOS</H1>   
+  <H1 class="font-monospace  text-uppercase">Clientes</H1>   
   <nav aria-label="Page navigation">
     <ul class="pagination justify-content-end ">
       <li class="page-item disabled">
@@ -164,35 +165,35 @@
     <table class="table table-bordered table-striped">
         <thead>
             <tr>
-              <th scope="col">Codigo</th>
-              <th scope="col">Foto</th>
+              <th scope="col">Nro Cliente</th>
               <th scope="col">Nombre</th>
-              <th scope="col">Stock</th>
-              <th scope="col">Editar</th>
+              <th scope="col">Email</th>
+              <th scope="col">Pedidos</th>
+              <th scope="col">Accion</th>
               <a href="dashboard.html"></a>  
             </tr>        
         </thead>
         <tbody class="table-group-divider">
+          <tr >
+            <th class="align-middle" scope="row">4125</th>
+            <td class="align-middle text-uppercase">Jorge Gonzales</td>
+            <td class="align-middle text-uppercase">jorg.go@email.com</td>
+            <td class="align-middle ">2</td>
+            <td class="align-middle " colspan="2"><button><i class="bi bi-pencil-square"></i><i class="bi bi-trash3-fill"></i></button></td>
+          </tr>
           <tr>
-            <th class="align-middle" scope="row">100</th>
-            <td><div class="container-fluid " style="width: 100PX;"><img src="../../img/30502.jpg" class="img-fluid"></td></div>
-            <td class="align-middle ">TARJETA SUPER PRO</td>
+            <th scope="row">4126</th>
+            <td class="align-middle text-uppercase">Emmanuel Flores</td>
+            <td class="align-middle text-uppercase">ema.flo@email.com</td>
             <td class="align-middle ">10</td>
-            <td class="align-middle " colspan="2">Ver informacion <button><i class="bi bi-pencil-square"></i></button></td>
+            <td class="align-middle " colspan="2"><button><i class="bi bi-pencil-square"></i><i class="bi bi-trash3-fill"></i></button></td>
           </tr>
           <tr>
-            <th scope="row">101</th>
-            <td><div class="container-fluid " style="width: 100PX;"><img src="../../img/30502.jpg" class="img-fluid"></td></div>
-            <td class="align-middle ">TARJETA SUPER PRO 2</td>
-            <td class="align-middle ">20</td>
-            <td class="align-middle " colspan="2">Ver informacion <button><i class="bi bi-pencil-square"></i></button></td>
-          </tr>
-          <tr>
-            <th scope="row">102</th>
-            <td><div class="container-fluid " style="width: 100PX;"><img src="../../img/30502.jpg" class="img-fluid"></td></div>
-            <td class="align-middle ">TARJETA SUPER PRO 3</td>
-            <td class="align-middle ">30 </td>
-            <td class="align-middle " colspan="2">Ver informacion <button><i class="bi bi-pencil-square"></i></button></td>
+            <th scope="row">4127</th>
+            <td class="align-middle text-uppercase">Alvaro Sanchez</td>
+            <td class="align-middle text-uppercase">alv.san@email.com</td>
+            <td class="align-middle ">15</td>
+            <td class="align-middle " colspan="2"><button><i class="bi bi-pencil-square"></i><i class="bi bi-trash3-fill"></i></button></td>
           </tr>
         </tbody>
       </table>
