--- a/html/dashboard/dashboard.html
+++ b/html/dashboard/dashboard.html
@@ -91,7 +91,7 @@
                 </div>
               </li>
               <li>
-                <a href="#" class="nav-link px-3 active">
+                <a href="../dashboard/dashboard.html" class="nav-link px-3 active">
                   <span class="me-2"><i class="bi bi-speedometer2"></i></span>
                   <span>Dashboard</span>
                 </a>
@@ -106,9 +106,8 @@
                 <a
                   class="nav-link px-3 sidebar-link"
                   data-bs-toggle="collapse"
-                  href="html/productos.html"
-                >
-                  <span class="me-2"><i class="bi bi-bag"></i></span>
+                  href="#">
+                  <span class="me-2" href="../dashboard/productos.html"><i class="bi bi-bag"></i></span>
                   <span>Productos</span>
                   <span class="ms-auto">
                     <span class="right-icon">
@@ -117,7 +116,7 @@
                 </a>
               </li>
               <li>
-                <a href="#" class="nav-link px-3">
+                <a href="../dashboard/cliente.html" class="nav-link px-3">
                   <span class="me-2"><i class="bi bi-person-vcard-fill"></i></span>
                   <span>Clientes</span>
                 </a>
@@ -129,15 +128,9 @@
                 </div>
               </li>
               <li>
-                <a href="#" class="nav-link px-3">
+                <a href="../dashboard/ventas.html" class="nav-link px-3">
                   <span class="me-2"><i class="bi bi-graph-up"></i></span>
                   <span>Ventas</span>
-                </a>
-              </li>
-              <li>
-                <a href="#" class="nav-link px-3">
-                  <span class="me-2"><i class="bi bi-table"></i></span>
-                  <span>Tablas</span>
                 </a>
               </li>
             </ul>
@@ -156,7 +149,7 @@
               <div class="card bg-primary text-white h-100">
                 <div class="card-body py-5">Clientes</div>
                 <div class="card-footer d-flex">
-                  Ver Details
+                  Ver Detalles
                   <span class="ms-auto">
                     <i class="bi bi-chevron-right"></i>
                   </span>
