--- a/html/dashboard/dashboard.html
+++ b/html/dashboard/dashboard.html
@@ -104,10 +104,9 @@
               </li>
               <li>
                 <a
-                  class="nav-link px-3 sidebar-link"
-                  data-bs-toggle="collapse"
-                  href="#">
-                  <span class="me-2" href="../dashboard/productos.html"><i class="bi bi-bag"></i></span>
+                  class="nav-link px-3"
+                  href="../dashboard/productos.html">
+                  <span class="me-2" ><i class="bi bi-bag"></i></span>
                   <span>Productos</span>
                   <span class="ms-auto">
                     <span class="right-icon">
