--- a/html/dashboard/cliente.html
+++ b/html/dashboard/cliente.html
@@ -104,7 +104,7 @@
                   </li>
                   <li>
                     <a
-                      class="nav-link px-3 sidebar-link"
+                      class="nav-link px-3"
                       data-bs-toggle="collapse"
                       href="../dashboard/productos.html">
                       <span class="me-2"><i class="bi bi-bag"></i></span>
