--- a/html/dashboard/productos.html
+++ b/html/dashboard/productos.html
@@ -104,8 +104,7 @@
                   </li>
                   <li>
                     <a
-                      class="nav-link px-3 sidebar-link"
-                      data-bs-toggle="collapse"
+                      class="nav-link px-3"
                       href="../dashboard/productos.html">
                       <span class="me-2"><i class="bi bi-bag"></i></span>
                       <span>Productos</span>
