--- a/html/dashboard/productos.html
+++ b/html/dashboard/productos.html
@@ -66,7 +66,7 @@
                       <i class="bi bi-person-fill"></i>
                     </a>
                     <ul class="dropdown-menu dropdown-menu-end">
-                      <li><a class="dropdown-item" href="#">Action</a></li>
+                      <li><a class="dropdown-item" href="../site/index.html">Ir a pagina principal</a></li>
                       <li><a class="dropdown-item" href="#">Another action</a></li>
                       <li>
                         <a class="dropdown-item" href="#">Something else here</a>
