--- a/html/site/index.html
+++ b/html/site/index.html
@@ -30,15 +30,20 @@
                 <div class="row">
                   <button
                     type="button"
-                    class="btn btn-primary col-6"
+                    class="btn btn-primary col-3"
                   >
                   <a href="carrito.html">Carrito</a>
                   </button>
                   <button
                     type="button"
-                    class="btn btn-secondary col-6"
+                    class="btn btn-secondary col-4"
                   >
                   <a href="login.html">Ingresar</a>
+                  <button
+                    type="button"
+                    class="btn btn-secondary col-5"
+                  >
+                  <a href="../dashboard/dashboard.html">Dashboard</a>
                   </div>
                 </div>
             </div>
