--- a/html/site/info_producto.html
+++ b/html/site/info_producto.html
@@ -27,19 +27,24 @@
                     </div>
                 </div>
                 <div class="p-1">
-                <div class="row">
-                  <button
-                    type="button"
-                    class="btn btn-primary col-6"
-                  >
-                  <a href="carrito.html">Carrito</a>
-                  </button>
-                  <button
-                    type="button"
-                    class="btn btn-secondary col-6"
-                  >
-                  <a href="login.html">Ingresar</a>
-                  </div>
+                  <div class="row">
+                    <button
+                      type="button"
+                      class="btn btn-primary col-3"
+                    >
+                    <a href="carrito.html">Carrito</a>
+                    </button>
+                    <button
+                      type="button"
+                      class="btn btn-secondary col-4"
+                    >
+                    <a href="login.html">Ingresar</a>
+                    <button
+                      type="button"
+                      class="btn btn-secondary col-5"
+                    >
+                    <a href="../dashboard/dashboard.html">Dashboard</a>
+                    </div>
                 </div>
             </div>
         </div>
