--- a/html/site/elementos/producto.html
+++ b/html/site/elementos/producto.html
@@ -4,21 +4,23 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Index</title>
-    <link rel="stylesheet" href="../../css/bootstrap.css">
-    <link rel="stylesheet" href="../../css/style.css">
+    <link rel="stylesheet" href="../../../css/bootstrap.css">
+    <link rel="stylesheet" href="../../../css/style.css">
 </head>
 <body>
-<div class="container rounded border bg-light product-card">
-  <a href="">
-    <div class="row">
-      <div class="col"> <img src="../../img/gpu.png" alt="" class="product-img rounded"></div>
-      <div class="col">
-        <h3>GeForce RTX 4060 VENTUS 2X BLACK 8G</h3>
-        <p>Stock: 10</p>
-        <h2 class="text-end me-3">$299.990</h2>
-        </div>
-    </div>
-  </a>
-</div>
+  <div class="container-fluid rounded border bg-light">
+    <a href="">
+      <div class="row">
+        <div class="col 12 col-sm-6"> <img src="../../../img/gpu.png" alt="" class="product-img rounded"></div>
+        <div class="col-sm-6">
+          <p>GeForce RTX 4060 VENTUS 2X BLACK 8G</p>
+          <p>Stock: 10</p>
+          <p class="text-end me-3">$299.990</p>
+          </div>
+      </div>
+    </a>
+  </div>
 </body>
 </html>
+
+col-12 col-sm-6 col-md-4 col-lg-3 product-block
