--- a/html/site/productos.html
+++ b/html/site/productos.html
@@ -11,197 +11,218 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
 </head>
 <body>
-        <div class = "container-fluid" >
-            <div class="d-flex justify-content-between align-items-center">
-                <div class="p-3 ">
-                    <a href="index.html"><img  src="../../img/pcshop_logo.png" alt="pcshopLogo" height="74"></a>
+  <!-- Header -->
+  <div class = "container" >
+    <div class="row justify-content-between">
+        <div class="col-12 col-md-2 d-flex align-items-center justify-content-center">
+            <a href="index.html"><img  src="../../img/pcshop_logo.png" alt="pcshopLogo" height="74"></a>
+        </div>
+        <div class="col-12 col-sm-6 col-md-5 d-flex align-items-center justify-content-center">
+            <div class="row">
+                <div class="col-8 col-lg-8">
+                     <input type="text" class="form-control" placeholder="Buscar un producto...">
                 </div>
-                <div class="p-6">
-                    <div class="d-flex align-items-center">
-                        <div class="p-8">
-                             <input type="text" class="form-control" placeholder="Buscar un producto...">
-                        </div>
-                        <div class="p-4">
-                            <button class="btn btn-secondary"><a href="busqueda.html">Buscar</a></button>
-                        </div>
-                    </div>
-                </div>
-                <div class="p-1">
-                  <div class="row">
-                    <button
-                      type="button"
-                      class="btn btn-primary col-3"
-                    >
-                    <a href="carrito.html">Carrito</a>
-                    </button>
-                    <button
-                      type="button"
-                      class="btn btn-secondary col-4"
-                    >
-                    <a href="login.html">Ingresar</a>
-                    <button
-                      type="button"
-                      class="btn btn-secondary col-5"
-                    >
-                    <a href="../dashboard/dashboard.html">Dashboard</a>
-                    </div>
+                <div class="col-4 col-sm-4">
+                    <button class="btn btn-secondary"><a href="busqueda.html">Buscar</a></button>
                 </div>
             </div>
         </div>
-    <nav class="navbar navbar-expand-xxl navbar-dark  bg-dark ">
-        <a class="navbar-brand ms-3" href="index.html">Inicio</a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarNav">
-          <ul class="navbar-nav">
-            <li class="nav-item">
-              <a class="nav-link" href="productos.html">Procesadores</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="productos.html">GPUS</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="productos.html">Motherboards</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="productos.html">Memorias</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="productos.html">Discos Duros</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="productos.html">Gabinetes</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="productos.html">Fuentes</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="productos.html">Ventilación</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="productos.html">Accesorios</a>
-            </li>
-          </ul>
+        <div class="col-12 col-sm-6 col-md-4 align-items-center justify-content-center">
+        <div class="row justify-content-center mt-3 mb-3">
+          <button
+            type="button"
+            class="btn btn-primary col-12 col-sm-3 w-auto m-1"
+          >
+          <a href="carrito.html">Carrito</a>
+          </button>
+          <button
+            type="button"
+            class="btn btn-secondary col-12 col-sm-4 w-auto m-1"
+          >
+          <a href="login.html">Ingresar</a>
+          <button
+            type="button"
+            class="btn btn-success col-12 col-sm-5 w-auto m-1"
+          >
+          <a href="../dashboard/dashboard.html">Dashboard</a>
+          </div>
         </div>
-      </nav>
-        </div>
+    </div>
+</div>
+<nav class="navbar navbar-expand-xxl navbar-dark  bg-dark ">
+<a class="navbar-brand ms-3" href="index.html">Inicio</a>
+<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+  <span class="navbar-toggler-icon"></span>
+</button>
+<div class="collapse navbar-collapse" id="navbarNav">
+  <ul class="navbar-nav">
+    <li class="nav-item">
+      <a class="nav-link" href="productos.html">Procesadores</a>
+    </li>
+    <li class="nav-item">
+      <a class="nav-link" href="productos.html">GPUS</a>
+    </li>
+    <li class="nav-item">
+      <a class="nav-link" href="productos.html">Motherboards</a>
+    </li>
+    <li class="nav-item">
+      <a class="nav-link" href="productos.html">Memorias</a>
+    </li>
+    <li class="nav-item">
+      <a class="nav-link" href="productos.html">Discos Duros</a>
+    </li>
+    <li class="nav-item">
+      <a class="nav-link" href="productos.html">Gabinetes</a>
+    </li>
+    <li class="nav-item">
+      <a class="nav-link" href="productos.html">Fuentes</a>
+    </li>
+    <li class="nav-item">
+      <a class="nav-link" href="productos.html">Ventilación</a>
+    </li>
+    <li class="nav-item">
+      <a class="nav-link" href="productos.html">Accesorios</a>
+    </li>
+  </ul>
+</div>
+</nav>
+<!-- Fin Header -->
         <div class="container-fluid p-5">
           <h1>"Categoría"</h1>
-          <div class="container-fluid">
-            <div class="row">
-                <div class="col-xl-4 mb-5">
-                    <div class="container-fluid rounded border bg-light product-card">
-                        <a href="info_producto.html">
-                          <div class="row">
-                            <div class="col-6"> <img src="../../img/gpu.png" alt="" class="product-img rounded"></div>
-                            <div class="col-6">
-                              <h3>GeForce RTX 4060 VENTUS 2X BLACK 8G</h3>
-                              <p>Stock: 10</p>
-                              <h2 class="text-end me-3 wrap">$299.990</h2>
-                            </div>
-                          </div>
-                        </a>
+          <div class="container">
+            <div class="row row-cols-3 justify-content-center">
+              <div class="col-auto col-sm-6 col-md-5 col-lg-3 m-4 rounded border bg-light">
+                <a href="info_producto.html">
+                  <div class="row">
+                    <div class="col"> <img src="../../img/gpu.png" alt="" class="product-img rounded"></div>
+                    <div class="col">
+                      <p>GeForce RTX 4060 VENTUS 2X BLACK 8G</p>
+                      <p>Stock: 10</p>
+                      <p class="text-end me-3">$299.990</p>
                       </div>
-                </div>
-                <div class="col-xl-4 mb-5">
-                    <div class="container rounded border bg-light product-card">
-                        <a href="info_producto.html">
-                          <div class="row">
-                            <div class="col"> <img src="../../img/gpu.png" alt="" class="product-img rounded"></div>
-                            <div class="col">
-                              <h3>GeForce RTX 4060 VENTUS 2X BLACK 8G</h3>
-                              <p>Stock: 10</p>
-                              <h2 class="text-end me-3">$299.990</h2>
-                              </div>
-                          </div>
-                        </a>
+                  </div>
+                </a>
+              </div>
+              <div class="col-auto col-sm-6 col-md-5 col-lg-3 m-4 rounded border bg-light">
+                <a href="info_producto.html">
+                  <div class="row">
+                    <div class="col"> <img src="../../img/gpu.png" alt="" class="product-img rounded"></div>
+                    <div class="col">
+                      <p>GeForce RTX 4060 VENTUS 2X BLACK 8G</p>
+                      <p>Stock: 10</p>
+                      <p class="text-end me-3">$299.990</p>
                       </div>
-                </div>
-                <div class="col-xl-4 mb-5">
-                    <div class="container rounded border bg-light product-card">
-                        <a href="info_producto.html">
-                          <div class="row">
-                            <div class="col"> <img src="../../img/gpu.png" alt="" class="product-img rounded"></div>
-                            <div class="col">
-                              <h3>GeForce RTX 4060 VENTUS 2X BLACK 8G</h3>
-                              <p>Stock: 10</p>
-                              <h2 class="text-end me-3">$299.990</h2>
-                              </div>
-                          </div>
-                        </a>
+                  </div>
+                </a>
+              </div>
+              <div class="col-auto col-sm-6 col-md-5 col-lg-3 m-4 rounded border bg-light">
+                <a href="info_producto.html">
+                  <div class="row">
+                    <div class="col"> <img src="../../img/gpu.png" alt="" class="product-img rounded"></div>
+                    <div class="col">
+                      <p>GeForce RTX 4060 VENTUS 2X BLACK 8G</p>
+                      <p>Stock: 10</p>
+                      <p class="text-end me-3">$299.990</p>
                       </div>
-                </div>
-                <div class="col-xl-4 mb-5">
-                    <div class="container rounded border bg-light product-card">
-                        <a href="info_producto.html">
-                          <div class="row">
-                            <div class="col"> <img src="../../img/gpu.png" alt="" class="product-img rounded"></div>
-                            <div class="col">
-                              <h3>GeForce RTX 4060 VENTUS 2X BLACK 8G</h3>
-                              <p>Stock: 10</p>
-                              <h2 class="text-end me-3">$299.990</h2>
-                              </div>
-                          </div>
-                        </a>
+                  </div>
+                </a>
+              </div>
+              <div class="col-auto col-sm-6 col-md-5 col-lg-3 m-4 rounded border bg-light">
+                <a href="info_producto.html">
+                  <div class="row">
+                    <div class="col"> <img src="../../img/gpu.png" alt="" class="product-img rounded"></div>
+                    <div class="col">
+                      <p>GeForce RTX 4060 VENTUS 2X BLACK 8G</p>
+                      <p>Stock: 10</p>
+                      <p class="text-end me-3">$299.990</p>
                       </div>
-                </div>
-                <div class="col-xl-4 mb-5">
-                    <div class="container rounded border bg-light product-card">
-                        <a href="info_producto.html">
-                          <div class="row">
-                            <div class="col"> <img src="../../img/gpu.png" alt="" class="product-img rounded"></div>
-                            <div class="col">
-                              <h3>GeForce RTX 4060 VENTUS 2X BLACK 8G</h3>
-                              <p>Stock: 10</p>
-                              <h2 class="text-end me-3">$299.990</h2>
-                              </div>
-                          </div>
-                        </a>
+                  </div>
+                </a>
+              </div>
+              <div class="col-auto col-sm-6 col-md-5 col-lg-3 m-4 rounded border bg-light">
+                <a href="info_producto.html">
+                  <div class="row">
+                    <div class="col"> <img src="../../img/gpu.png" alt="" class="product-img rounded"></div>
+                    <div class="col">
+                      <p>GeForce RTX 4060 VENTUS 2X BLACK 8G</p>
+                      <p>Stock: 10</p>
+                      <p class="text-end me-3">$299.990</p>
                       </div>
-                </div>
-                <div class="col-xl-4 mb-5">
-                    <div class="container rounded border bg-light product-card">
-                        <a href="info_producto.html">
-                          <div class="row">
-                            <div class="col"> <img src="../../img/gpu.png" alt="" class="product-img rounded"></div>
-                            <div class="col">
-                              <h3>GeForce RTX 4060 VENTUS 2X BLACK 8G</h3>
-                              <p>Stock: 10</p>
-                              <h2 class="text-end me-3">$299.990</h2>
-                              </div>
-                          </div>
-                        </a>
+                  </div>
+                </a>
+              </div>
+              <div class="col-auto col-sm-6 col-md-5 col-lg-3 m-4 rounded border bg-light">
+                <a href="info_producto.html">
+                  <div class="row">
+                    <div class="col"> <img src="../../img/gpu.png" alt="" class="product-img rounded"></div>
+                    <div class="col">
+                      <p>GeForce RTX 4060 VENTUS 2X BLACK 8G</p>
+                      <p>Stock: 10</p>
+                      <p class="text-end me-3">$299.990</p>
                       </div>
-                </div>
-                <div class="col-xl-4 mb-5">
-                    <div class="container rounded border bg-light product-card">
-                        <a href="info_producto.html">
-                          <div class="row">
-                            <div class="col"> <img src="../../img/gpu.png" alt="" class="product-img rounded"></div>
-                            <div class="col">
-                              <h3>GeForce RTX 4060 VENTUS 2X BLACK 8G</h3>
-                              <p>Stock: 10</p>
-                              <h2 class="text-end me-3">$299.990</h2>
-                              </div>
-                          </div>
-                        </a>
+                  </div>
+                </a>
+              </div>
+              <div class="col-auto col-sm-6 col-md-5 col-lg-3 m-4 rounded border bg-light">
+                <a href="info_producto.html">
+                  <div class="row">
+                    <div class="col"> <img src="../../img/gpu.png" alt="" class="product-img rounded"></div>
+                    <div class="col">
+                      <p>GeForce RTX 4060 VENTUS 2X BLACK 8G</p>
+                      <p>Stock: 10</p>
+                      <p class="text-end me-3">$299.990</p>
                       </div>
-                </div>
-                <div class="col-xl-4 mb-5">
-                    <div class="container rounded border bg-light product-card">
-                        <a href="info_producto.html">
-                          <div class="row">
-                            <div class="col"> <img src="../../img/gpu.png" alt="" class="product-img rounded"></div>
-                            <div class="col">
-                              <h3>GeForce RTX 4060 VENTUS 2X BLACK 8G</h3>
-                              <p>Stock: 10</p>
-                              <h2 class="text-end me-3">$299.990</h2>
-                              </div>
-                          </div>
-                        </a>
+                  </div>
+                </a>
+              </div>
+              <div class="col-auto col-sm-6 col-md-5 col-lg-3 m-4 rounded border bg-light">
+                <a href="info_producto.html">
+                  <div class="row">
+                    <div class="col"> <img src="../../img/gpu.png" alt="" class="product-img rounded"></div>
+                    <div class="col">
+                      <p>GeForce RTX 4060 VENTUS 2X BLACK 8G</p>
+                      <p>Stock: 10</p>
+                      <p class="text-end me-3">$299.990</p>
                       </div>
-                </div>
+                  </div>
+                </a>
+              </div>
+              <div class="col-auto col-sm-6 col-md-5 col-lg-3 m-4 rounded border bg-light">
+                <a href="info_producto.html">
+                  <div class="row">
+                    <div class="col"> <img src="../../img/gpu.png" alt="" class="product-img rounded"></div>
+                    <div class="col">
+                      <p>GeForce RTX 4060 VENTUS 2X BLACK 8G</p>
+                      <p>Stock: 10</p>
+                      <p class="text-end me-3">$299.990</p>
+                      </div>
+                  </div>
+                </a>
+              </div>
+              <div class="col-auto col-sm-6 col-md-5 col-lg-3 m-4 rounded border bg-light">
+                <a href="info_producto.html">
+                  <div class="row">
+                    <div class="col"> <img src="../../img/gpu.png" alt="" class="product-img rounded"></div>
+                    <div class="col">
+                      <p>GeForce RTX 4060 VENTUS 2X BLACK 8G</p>
+                      <p>Stock: 10</p>
+                      <p class="text-end me-3">$299.990</p>
+                      </div>
+                  </div>
+                </a>
+              </div>
+              <div class="col-auto col-sm-6 col-md-5 col-lg-3 m-4 rounded border bg-light">
+                <a href="info_producto.html">
+                  <div class="row">
+                    <div class="col"> <img src="../../img/gpu.png" alt="" class="product-img rounded"></div>
+                    <div class="col">
+                      <p>GeForce RTX 4060 VENTUS 2X BLACK 8G</p>
+                      <p>Stock: 10</p>
+                      <p class="text-end me-3">$299.990</p>
+                      </div>
+                  </div>
+                </a>
+              </div>
             </div>
         </div>
         </div>
