--- a/html/dashboard/dashboard.html
+++ b/html/dashboard/dashboard.html
@@ -26,8 +26,8 @@
           </button>
           <a
             class="navbar-brand me-auto ms-lg-0 ms-3 text-uppercase fw-bold"
-            href="#"
-            >ROBUX</a
+            href="../dashboard/dashboard.html"
+            >PCSHOP</a
           >
           <button
             class="navbar-toggler"
@@ -67,9 +67,9 @@
                 </a>
                 <ul class="dropdown-menu dropdown-menu-end">
                   <li><a class="dropdown-item" href="../site/index.html">Ir a pagina principal</a></li>
-                  <li><a class="dropdown-item" href="#">Another action</a></li>
+                  <li><a class="dropdown-item" href="../dashboard/productos.html">Ir a productos</a></li>
                   <li>
-                    <a class="dropdown-item" href="#">Something else here</a>
+                    <a class="dropdown-item" href="../dashboard/cliente.html">Ir a clientes</a>
                   </li>
                 </ul>
               </li>
@@ -183,7 +183,7 @@
               <div class="card h-100">
                 <div class="card-header">
                   <span class="me-2"><i class="bi bi-bar-chart-fill"></i></span>
-                  Area Chart Example
+                  Informacion pedidos
                 </div>
                 <div class="card-body">
                   <canvas class="chart" width="400" height="200"></canvas>
@@ -194,7 +194,7 @@
               <div class="card h-100">
                 <div class="card-header">
                   <span class="me-2"><i class="bi bi-bar-chart-fill"></i></span>
-                  Area Chart Example
+                  Informacion ventas
                 </div>
                 <div class="card-body">
                   <canvas class="chart" width="400" height="200"></canvas>
