--- a/html/dashboard/ventas.html
+++ b/html/dashboard/ventas.html
@@ -26,8 +26,8 @@
               </button>
               <a
                 class="navbar-brand me-auto ms-lg-0 ms-3 text-uppercase fw-bold"
-                href="#"
-                >ROBUX</a
+                href="../dashboard/dashboard.html"
+                >PCSHOP</a
               >
               <button
                 class="navbar-toggler"
