--- a/html/site/pago.html
+++ b/html/site/pago.html
@@ -19,16 +19,19 @@
   <div class="row justify-content-center">
     <div class="col-12 col-sm-5 border rounded mx-3">
       <h3 class="m-3">Información del envío</h3>
-      <form>
+      <form action="index.html" class="needs-validation">
         <div class="mb-3 p-3">
           <label for="" class="form-label">Dirección del envío</label>
-          <input type="" class="form-control" id="">
+          <input type="" class="form-control" id="" required>
           <label for="" class="form-label">Comuna</label>
-          <input type="" class="form-control" id="">
+          <input type="" class="form-control" id="" required>
           <label for="" class="form-label">Ciudad</label>
-          <input type="" class="form-control" id="">
+          <input type="" class="form-control" id="" required>
           <label for="" class="form-label">Número de contacto</label>
-          <input type="" class="form-control" id="">
+          <input type="" class="form-control" id="" required>         
+          <div class="text-center mb-3 ">
+            <button type="submit" class="btn btn-success mt-3"> Pagar</button>
+          </div>
         </div>
       </form>
     </div>
@@ -56,7 +59,6 @@
           <p class="col-3 text-end">$9990000</p>
         </div>
 
-        <div class="text-center mb-3 "><button class="btn btn-success"> <a href="exito.html">Pagar</a></button></div>
       </div>
     </div>
   </div>
