Cambios de forms en productos y nueva pagina infousuario

--- a/html/dashboard/cliente.html
+++ b/html/dashboard/cliente.html
@@ -165,7 +165,7 @@
               <th scope="col">Nombre</th>
               <th scope="col">Email</th>
               <th scope="col">Pedidos</th>
-              <th scope="col">Accion</th>
+              <th scope="col">Ver Informacion</th>
               <a href="dashboard.html"></a>  
             </tr>        
         </thead>
