--- a/html/dashboard/infousuario.html
+++ b/html/dashboard/infousuario.html
@@ -120,46 +120,6 @@
 
         </div>
         <div class="col">
-            <div class="container-fluid" style="margin-top: 4vw;">
-                <H1 class="font-monospace  text-uppercase ">AÑADIR PRODUCTO</H1>
-                <form action="../dashboard/productos.html" method="post" class="needs-validated">
-                    <div class="form-group col-md">
-                        <label for="precioproducto">Añada el precio del producto</label>
-                        <input name="precioproducto" type="number" class="form-control" id="precioproducto" required>
-                    </div>
-                    <div class="form-group col-md">
-                        <label for="imagenproducto">Añadir imagen del producto</label>
-                        <input name="imagenproducto" type="file" class="form-control form-control-file" id="imagenproducto"
-                            aria-label="file example" required>
-                        <div class="invalid-feedback">Archivo invalido</div>
-                    </div>
-                    <div class="form-group">
-                        <label for="nombredelproducto" class="form-label">Nombre del producto</label>
-                        <input name="nombredelproducto" type="text" class="form-control" id="nombredelproducto"
-                            placeholder="Ingrese el nombre del producto" minlength="1" required>
-                    </div>
-                    <div class="form-group col-md">
-                        <label for="stockproducto">Stock del producto</label>
-                        <input name="stockproducto" type="number" class="form-control" id="stockproducto" required>
-                    </div>
-                    <div class="form-group">
-                        <label for="descripcionproducto" class="form-label">Descripcion del Producto</label>
-                        <textarea name="descripcionproducto" class="form-control" id="descripcionproducto" rows="3"  placeholder="Ingrese la descripcion del producto" minlength="1" required></textarea>
-                    </div>
-                    <div style="margin-top: 1vw">
-                        <button type="submit" class="btn btn-primary">Añadir</button>
-                    </div>
-                    <div style="margin-top: 1vw">
-                        <a  href="../dashboard/productos.html">Volver</a>
-                    </div>
-                </form>
-            </div>
-        </div>
-        <div class="col">
-
-        </div>
-
-    </div>
-</body>
-
-</html>
+            <div class="container-fluid" style="margin-top: 4vw; margin-left: 1vw;">
+                <H1 class="font-monospace  text-uppercase ">Informacion Cliente </H1>
+                
