--- a/html/dashboard/editarproducto.html
+++ b/html/dashboard/editarproducto.html
@@ -121,10 +121,10 @@
         </div>
         <div class="col">
             <div class="container-fluid" style="margin-top: 4vw;">
-                <H1 class="font-monospace  text-uppercase ">AÑADIR PRODUCTO</H1>
+                <H1 class="font-monospace  text-uppercase ">EDITAR PRODUCTO</H1>
                 <form action="../dashboard/productos.html" method="post" class="needs-validated">
                     <div class="form-group col-md">
-                        <label for="precioproducto">Añada el precio del producto</label>
+                        <label for="precioproducto">Modifique el precio del producto</label>
                         <input name="precioproducto" type="number" class="form-control" id="precioproducto" required>
                     </div>
                     <div class="form-group col-md">
@@ -134,20 +134,20 @@
                         <div class="invalid-feedback">Archivo invalido</div>
                     </div>
                     <div class="form-group">
-                        <label for="nombredelproducto" class="form-label">Nombre del producto</label>
+                        <label for="nombredelproducto" class="form-label">Modifique el nombre del producto</label>
                         <input name="nombredelproducto" type="text" class="form-control" id="nombredelproducto"
                             placeholder="Ingrese el nombre del producto" minlength="1" required>
                     </div>
                     <div class="form-group col-md">
-                        <label for="stockproducto">Stock del producto</label>
+                        <label for="stockproducto">Modifique el stock del producto</label>
                         <input name="stockproducto" type="number" class="form-control" id="stockproducto" required>
                     </div>
                     <div class="form-group">
-                        <label for="descripcionproducto" class="form-label">Descripcion del Producto</label>
+                        <label for="descripcionproducto" class="form-label">Modifique la descripcion del Producto</label>
                         <textarea name="descripcionproducto" class="form-control" id="descripcionproducto" rows="3"  placeholder="Ingrese la descripcion del producto" minlength="1" required></textarea>
                     </div>
                     <div style="margin-top: 1vw">
-                        <button type="submit" class="btn btn-primary">Añadir</button>
+                        <button type="submit" class="btn btn-primary">Confirmar cambios</button>
                     </div>
                     <div style="margin-top: 1vw">
                         <a  href="../dashboard/productos.html">Volver</a>
