Added news section

--- a/html/site/index.html
+++ b/html/site/index.html
@@ -106,8 +106,14 @@
           <h3>Preventas</h3>
         </a></div>
     </div>
-    <div class="row">
+    <div class="">
       <h1>Ultimas noticias de tecnología</h1>
+    </div>
+    <div class="row">
+      <div class="col">
+        
+      </div>
+      <div class="col"></div>
     </div>
   </div>
   <div class="container mt-3">
