Implementada api de noticias

--- a/html/site/index.html
+++ b/html/site/index.html
@@ -106,14 +106,23 @@
           <h3>Preventas</h3>
         </a></div>
     </div>
+    <script src="../../js/query.js"></script>
     <div class="">
-      <h1>Ultimas noticias de tecnología</h1>
+      <h2>Ultimas noticias de tecnología</h2>
     </div>
-    <div class="row">
-      <div class="col">
-        
+    <div class="d-flex justify-content-center"  >
+      <div class="text-center spinner-border text-light" id="spinnerNoticia"></div>
+    </div>
+
+    <div class="row" id="seccionNoticia">
+      <div class="col-sm-4">
+        <a href="" id="linkNoticia"><img class="container-fluid" src="" alt="" id="noticiaImagen"></a>
       </div>
-      <div class="col"></div>
+      <div class="col-sm-6">
+        <h3 id="headerNoticia"></h3>
+        <p id="textoNoticia"></p>
+      </div>
+      
     </div>
   </div>
   <div class="container mt-3">
