--- a/html/dashboard/infousuario.html
+++ b/html/dashboard/infousuario.html
@@ -117,9 +117,8 @@
     </div>
     <div class="row">
         <div class="col">
-
+            <div class="container-fluid" style="margin-top: 4vw; margin-right: 2vw;">
+                <H1 class="font-monospace  text-uppercase text-center">Informacion Cliente </H1>
+            </div>            
         </div>
-        <div class="col">
-            <div class="container-fluid" style="margin-top: 4vw; margin-left: 1vw;">
-                <H1 class="font-monospace  text-uppercase ">Informacion Cliente </H1>
-                
+    </div>
