--- a/html/dashboard/dashboard.html
+++ b/html/dashboard/dashboard.html
@@ -26,7 +26,7 @@
           </button>
           <a
             class="navbar-brand me-auto ms-lg-0 ms-3 text-uppercase fw-bold"
-            href="#"
+            href="../dashboard/dashboard.html"
             >ROBUX</a
           >
           <button
