Añadido info usuario y cambios en los titulos de pagina

--- a/html/dashboard/cliente.html
+++ b/html/dashboard/cliente.html
@@ -175,21 +175,30 @@
             <td class="align-middle text-uppercase">Jorge Gonzales</td>
             <td class="align-middle text-uppercase">jorg.go@email.com</td>
             <td class="align-middle ">2</td>
-            <td class="align-middle " colspan="2"><button><i class="bi bi-pencil-square"></i><i class="bi bi-trash3-fill"></i></button></td>
+            <td class="align-middle " colspan="2"><a class="icon-link" href="../dashboard/infousuario.html">
+              <svg class="bi bi-pencil-square" aria-hidden="true"><use xlink:href="#box-seam"></use></svg>
+              Informacion
+            </a></td>
           </tr>
           <tr>
             <th scope="row">4126</th>
             <td class="align-middle text-uppercase">Emmanuel Flores</td>
             <td class="align-middle text-uppercase">ema.flo@email.com</td>
             <td class="align-middle ">10</td>
-            <td class="align-middle " colspan="2"><button><i class="bi bi-pencil-square"></i><i class="bi bi-trash3-fill"></i></button></td>
+            <td class="align-middle " colspan="2"><a class="icon-link" href="../dashboard/infousuario.html">
+              <svg class="bi bi-pencil-square" aria-hidden="true"><use xlink:href="#box-seam"></use></svg>
+              Informacion
+            </a></td>
           </tr>
           <tr>
             <th scope="row">4127</th>
             <td class="align-middle text-uppercase">Alvaro Sanchez</td>
             <td class="align-middle text-uppercase">alv.san@email.com</td>
             <td class="align-middle ">15</td>
-            <td class="align-middle " colspan="2"><button><i class="bi bi-pencil-square"></i><i class="bi bi-trash3-fill"></i></button></td>
+            <td class="align-middle " colspan="2"><a class="icon-link" href="../dashboard/infousuario.html">
+              <svg class="bi bi-pencil-square" aria-hidden="true"><use xlink:href="#box-seam"></use></svg>
+              Informacion
+            </a></td>
           </tr>
         </tbody>
       </table>
