--- a/html/dashboard/añadirproducto.html
+++ b/html/dashboard/añadirproducto.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Dashboard</title>
+    <title>Añadir Producto</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
@@ -120,7 +120,7 @@
 
         </div>
         <div class="col">
-            <div class="container-fluid" style="margin-top: 4vw;">
+            <div class="container-fluid " style="margin-top: 4vw;">
                 <H1 class="font-monospace  text-uppercase ">AÑADIR PRODUCTO</H1>
                 <form action="../dashboard/productos.html" method="post" class="needs-validated">
                     <div class="form-group col-md">
