--- a/html/dashboard/infousuario.html
+++ b/html/dashboard/infousuario.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Dashboard</title>
+    <title>Informacion Usuario</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
@@ -119,6 +119,44 @@
         <div class="col">
             <div class="container-fluid" style="margin-top: 4vw; margin-right: 2vw;">
                 <H1 class="font-monospace  text-uppercase text-center">Informacion Cliente </H1>
-            </div>            
-        </div>
+            </div>    
+            <div class="container border-light " style="width: 550px;">
+                <div class="mb-3">
+                <label for="" class="form-label">Nombre completo</label>
+                <input
+                    type="text"
+                    class="form-control"
+                    name="nombre"
+                    id="nombre"
+                    required
+                    maxlength="50"
+                />
+                </div>
+                <div class="mb-3">
+                <label for="" class="form-label">Rut</label>
+                <input
+                    type="text"
+                    class="form-control"
+                    name="rut"
+                    id="rut"
+                    required
+                    onblur="validarRut()"
+                />
+                <p class="text-danger" id="ruterror"></p>
+                </div>
+                <div class="mb-3">
+                <label for="" class="form-label">Email</label>
+                <input
+                    type="email"
+                    class="form-control"
+                    name="email"
+                    id="correo"
+                    required
+                    maxlength="50"
+                    
+                />
+                </div>
+                <div style="margin-top: 1vw">
+                    <a  href="../dashboard/cliente.html">Volver</a>
+                </div>
     </div>
