--- a/html/site/login.html
+++ b/html/site/login.html
@@ -25,6 +25,7 @@
                     id=""
                     aria-describedby="emailHelpId"
                     placeholder="Ingrese su email..."
+                    maxlength="50"
                     required
                 />
                 </div>
@@ -36,6 +37,7 @@
                     name="pass"
                     id=""
                     placeholder="Ingrese contraseña...."
+                    maxlength="50"
                     required
                 />
                 </div>
