--- a/html/site/registro.html
+++ b/html/site/registro.html
@@ -34,6 +34,7 @@
                     class="form-control"
                     name="rut"
                     id="rut"
+                    maxlength="10"
                     required
                     onblur="validarRut()"
                 />
